--- a/webdocs/euler/index.html
+++ b/webdocs/euler/index.html
@@ -1,18 +1,42 @@
 <html>
 <head>
-	<title>I &lt;3 Euler</title>
+	<base href="..">
+	<title>I less than 3 Euler</title>
+	<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+	<script src="MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+	<script type="text/javascript" src="js/euler.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/euler.css" />
 </head>
 
 <body>
-	<h2>Maths is beautiful</h2>
-	<p>Really, really, beautiful</p>
-	<p>Not only the results that it generates, but so too are the methods and thought processes used in the endeavour of creative mathematics</p>
-	<p>For a more eloquent description of the mind of a mathematician, try <a href="http://www.quora.com/Mathematics/What-is-it-like-to-understand-advanced-mathematics">this</a> link on Quora</p>
-	<p>One of the most famously beautiful results in mathematics is Euler's Identity. This can be expressed as </p>
-	<MATH>e<sup>i&pi;</sup> + 1 = 0</MATH>
-	<p>This page is an attempt to explain both the beauty of the result, and the beauty of its derivation</p>
-	<p>Work in progress (Hi Toni!)</p>
+	<div id="mainWrapper" class="mainWrapper">
+		<h1>Maths is beautiful</h1>
+		<p>Really, really, beautiful</p>
+		<p>Not only the results that it generates, but so too are the methods and thought processes used in the endeavour of creative mathematics</p>
+		<p>For a more eloquent description of the mind of a mathematician, try <a href="http://www.quora.com/Mathematics/What-is-it-like-to-understand-advanced-mathematics">this</a> link on Quora</p>
+		<p>One of the most famously beautiful results in mathematics is Euler's Identity. This can be expressed as </p>
+		<p> \[ e^{i&pi;} + 1 = 0 \]</p>
+		<p>This page is an attempt to explain both the beauty of the result, and the beauty of its derivation.</p>
+		<p>Throughout the derivation, there will be opportunities to learn more, or to get a justification for a certain statement. These addenda will be marked by clickable links reading <a class="moreLink" x-target="introSection"></a></p>
+		<div id="introSection" class="moreSection">
+			<p>Yep, just like that! Note that you can click the link above to collapse this box - or, for longer boxes, click the link at the bottom.</p>
+		</div>
+		<p>The intention of this is to demonstrate that all mathematical discoveries build on lower-level results or discoveries. In this way, we can use a short sentence to express a very complicated concept, because each word or phrase can be "unpacked" to give more meaning. Thus, with no "drilling down", the proof of the identity is simply as follows:</p>
+		<p>Note to self - definitions of e, cos, and sin here :) </p>
+		<p>\[ e^{ix} = \sum\limits_{n=0}^{&infin;} \frac{x^n}{n!} \] <a class="moreLink" x-target="taylorSeries"></a></p>
+		<div id="taylorSeries" class="moreSection">
+			<h3>Huh? Where did that come from?</h3>
+			<p>This is called a "Taylor Series"</p>
+		</div>
+		<p>\[ e^{ix} = cos(x) + i sin(x) \] </p>
+		<p>\[ \implies e^{i&pi;} = cos(&pi;) + i sin(&pi;) = -1 + 0 = -1 \]</p>
+		<p>\[ \implies e^{i&pi;} + 1 = 0 \]</p>
+		<p>Work in progress (Hi Toni!)</p>
+	</div>
 
 
 </body>
+
 </html>
